--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "is-svg": "^4.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loading": "^2.0.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
