--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "4.6.0",
+    "browserslist": "^4.16.6",
+    "glob-parent": "^6.0.0",
     "is-svg": "^4.3.1",
+    "normalize-url": "^6.0.1",
+    "postcss": "^8.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-loading": "^2.0.3",
