--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browserslist": "^4.16.6",
     "glob-parent": "^6.0.0",
     "is-svg": "^4.3.1",
+    "loose-envify": "^1.4.0",
     "normalize-url": "^6.0.1",
     "postcss": "^8.3.2",
     "react": "^17.0.1",
@@ -41,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "envify": "^4.1.0",
+    "terser": "^5.7.1",
+    "uglifyify": "^5.0.2"
   }
 }
