--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "4.6.0",
     "browserslist": "^4.16.6",
     "glob-parent": "^6.0.0",
+    "immer": "^9.0.6",
     "is-svg": "^4.3.1",
     "loose-envify": "^1.4.0",
     "normalize-url": "^6.0.1",
